<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo_joves">


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagen"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txfEmail"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:hint="@string/txf_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/holo_red_dark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txfPassword"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:hint="@string/txf_contrasena"
                android:inputType="textPassword"
                android:maxLength="40"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/holo_red_dark" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnRegistro"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:text="@string/texto_boton_registro" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/texto_boton_login" />

    </LinearLayout>


</RelativeLayout>