<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEventos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/status_bar"
        app:popupTheme="@style/AppTheme.AppBarOverlay"
        app:theme="@style/AppTheme.AppBarOverlay" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarEventos"
        android:background="@color/cardview_shadow_start_color">

        <ImageView
            android:id="@+id/imgSocioScn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            app:srcCompat="@drawable/no_perfil" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txfDniScn"
            android:layout_alignStart="@+id/txfDniScn"
            android:layout_alignTop="@+id/imgSocioScn"
            android:layout_marginTop="15dp"
            android:text="@string/lbl_socio"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txfDniScn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_toEndOf="@+id/imgSocioScn"
            android:layout_toRightOf="@+id/imgSocioScn"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txfSocioScn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txfPagadoScn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgSocioScn"
            android:layout_alignLeft="@+id/txfDniScn"
            android:layout_alignStart="@+id/txfDniScn"
            android:layout_marginBottom="14dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout2">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignStart="@+id/textView11"
                android:layout_below="@+id/textView11"
                android:layout_marginTop="26dp"
                android:text="@string/lbl_telefono"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignStart="@+id/textView9"
                android:layout_below="@+id/textView9"
                android:layout_marginTop="26dp"
                android:text="@string/lbl_email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txfTelefonoScn"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_toRightOf="@+id/textView3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="31dp"
                android:text="@string/lbl_nombre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txfEmailScn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView11"
                android:layout_alignBottom="@+id/textView11"
                android:layout_alignEnd="@+id/txfNombreScn"
                android:layout_alignLeft="@+id/txfNombreScn"
                android:layout_alignRight="@+id/txfNombreScn"
                android:layout_alignStart="@+id/txfNombreScn"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txfNombreScn"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignLeft="@+id/txfTelefonoScn"
                android:layout_alignStart="@+id/txfTelefonoScn"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="26dp"
                android:text="@string/lbl_poblacion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txfPoblacionScn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/txfTelefonoScn"
                android:layout_alignLeft="@+id/txfTelefonoScn"
                android:layout_alignRight="@+id/txfTelefonoScn"
                android:layout_alignStart="@+id/txfTelefonoScn"
                android:layout_alignTop="@+id/textView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_marginTop="26dp"
                android:paddingBottom="20dp"
                android:text="@string/lbl_direccion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txfDireccionScn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/txfPoblacionScn"
                android:layout_alignLeft="@+id/txfPoblacionScn"
                android:layout_alignRight="@+id/txfPoblacionScn"
                android:layout_alignStart="@+id/txfPoblacionScn"
                android:layout_alignTop="@+id/textView5"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>